k8s/labs/chat-microservices/k8s/chatter-b/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatter-b-svc
  namespace: chat-lab
spec:
  selector:
    app: chatter-b
  ports:
  - port: 3000
    targetPort: 3000
